Add functionality to list open editor tabs
Introduce a new command, `checking-extension.listEditorTabs`, to fetch and display information about open editor tabs. Added `EditorTabInfo` type for tab structure and updated the panel to handle posting this data to the webview.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
       {
         "title": "Translation Checking: Check translationWords",
         "command": "checking-extension.checkTWords"
+      },
+      {
+        "title": "Translation Checking: Get List of Editor Tabs",
+        "command": "checking-extension.listEditorTabs"
       }
     ],
     "customEditors": [
