--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "checking-extension",
   "displayName": "checking-extension",
   "description": "A vscode extension to open tn_check and twl_check files for checking verses",
-  "version": "0.9.17",
+  "version": "0.9.18",
   "publisher": "unfoldingWord",
   "engines": {
     "vscode": "^1.91.0"
@@ -37,6 +37,10 @@
       {
         "title": "Translation Checking: Check translationWords",
         "command": "checking-extension.checkTWords"
+      },
+      {
+        "title": "Translation Checking: Get List of Editor Tabs",
+        "command": "checking-extension.listEditorTabs"
       }
     ],
     "customEditors": [
