Add alignment suggestion logic and integrate fuzzball library
Introduced alignment suggestion functionality using the fuzzball library for improved matching logic. Updated dependencies to include fuzzball and upgraded checking-tool-rcl to a beta version. Adjusted related components and state management to support the new functionality.

--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -17,9 +17,10 @@
     "@material-ui/lab": "4.0.0-alpha.61",
     "@mui/lab": "5.0.0-alpha.89",
     "@vscode/webview-ui-toolkit": "^1.4.0",
-    "checking-tool-rcl": "0.9.24",
+    "checking-tool-rcl": "0.9.25-beta",
     "deep-equal": "1.0.1",
     "dompurify": "^3.0.9",
+    "fuzzball": "^2.2.2",
     "gitea-react-toolkit": "2.4.1",
     "localforage": "^1.10.0",
     "marked": "^12.0.0",
