--- a/package.json
+++ b/package.json
@@ -199,6 +199,7 @@
     "eslint-config-eslint": "^11.0.0",
     "eslint-plugin-jsdoc": "^48.10.1",
     "fs-extra": "^11.2.0",
+    "fuzzball": "^2.2.2",
     "lodash.clonedeep": "^4.5.0",
     "original-fs": "^1.2.0",
     "ospath": "^1.2.2",
@@ -209,6 +210,7 @@
     "usfm-js": "^3.4.2",
     "utf8": "3.0.0",
     "uw-tsv-parser": "^1.0.3",
+    "word-aligner-lib": "0.9.1-beta.9",
     "yamljs": "^0.3.0"
   }
 }
