--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -26,7 +26,8 @@
     "marked": "^12.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "string-punctuation-tokenizer": "^2.2.0"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
