--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -27,7 +27,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "string-punctuation-tokenizer": "^2.2.0"
+    "string-punctuation-tokenizer": "^2.2.0",
+    "word-aligner-lib": "0.9.1-beta.10"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
