--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -38,6 +38,6 @@
     "@vitejs/plugin-react": "^4.2.1",
     "cross-env": "^7.0.3",
     "typescript": "^5.3.3",
-    "vite": "^5.0.12"
+    "vite": "5.4.18"
   }
 }
