enable AI tests. Go back to shared folder

--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -6,8 +6,7 @@
     "start": "vite",
     "build": "cross-env MINIFY=true npm run buildSub",
     "build:dev": "cross-env MINIFY=false npm run buildSub",
-    "buildSub": "npm run copyShared && tsc && npm run viteCompile",
-    "copyShared": "mkdir -p ./src/utilities/shared && cp -f ../src/utilities/shared/*.ts ./src/utilities/shared/ && chmod u-w ./src/utilities/shared/*.ts",
+    "buildSub": "tsc && npm run viteCompile",
     "viteCompile": "cross-env NODE_OPTIONS=--max-old-space-size=6050 vite build",
     "preview": "vite preview"
   },
