Create symlink for shared folder and update related scripts
Added a script (`makeLink.js`) to create a symbolic link for the shared utilities folder. Updated the build process in `package.json` to use the symlink instead of copying files. Adjusted test paths to reference the new shared folder structure.

--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -6,8 +6,8 @@
     "start": "vite",
     "build": "cross-env MINIFY=true npm run buildSub",
     "build:dev": "cross-env MINIFY=false npm run buildSub",
-    "buildSub": "npm run copyShared && tsc && npm run viteCompile",
-    "copyShared": "mkdir -p ./src/utilities/shared && cp -f ../src/utilities/shared/*.ts ./src/utilities/shared/ && chmod u-w ./src/utilities/shared/*.ts",
+    "buildSub": "npm run makeShared && tsc && npm run viteCompile",
+    "makeShared": "node ./src/scripts/makeLink.js",
     "viteCompile": "cross-env NODE_OPTIONS=--max-old-space-size=6050 vite build",
     "preview": "vite preview"
   },
