--- a/package.json
+++ b/package.json
@@ -212,7 +212,7 @@
     "usfm-js": "^3.4.2",
     "utf8": "3.0.0",
     "uw-tsv-parser": "^1.0.3",
-    "word-aligner-lib": "0.9.1-beta.10",
+    "word-aligner-lib": "1.0.0",
     "yamljs": "^0.3.0"
   }
 }
